<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <POU Name="MA_Jog_Slave" Id="{deb34af5-2cec-40b0-8067-8e7aaeb57da4}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION MA_Jog_Slave : INT

VAR_INPUT
	//Enable: BOOL:=0;
	Speed: REAL:=0;
	Disturbance: REAL:=0;
END_VAR


VAR_IN_OUT
	Axis: Motion_Axis;
END_VAR

VAR
	i: INT:=0;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[Axis.IN_Closed_Open_Loop:=0;
Axis.IN_Enable_Control:=1;
Axis.OL_IN_Analog:=Speed;
Axis.OL_IN_Slave_Enable:=1;
Axis.OL_IN_Slave_Command:=Disturbance;
Axis.OL_Move_Type:=0;
Axis.OL_IN_Bump_Duration:= T#0MS;  //Timer for Bump Type of Move
Axis.OL_IN_Bump_Trigger:= 0;
]]></ST>
    </Implementation>
    <LineIds Name="MA_Jog_Slave">
      <LineId Id="3" Count="7" />
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>