<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <POU Name="MA_Jump" Id="{1532186e-e2ed-4daf-805b-0019b866528b}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION MA_Jump : INT

VAR_INPUT
	//Enable: BOOL:=0;
	Speed: REAL:=0;
	Bump_Duration: TIME:=T#0MS;
	//Bump_Trigger: BOOL := 0;
END_VAR


VAR_IN_OUT
	Axis: Motion_Axis;
END_VAR

VAR
	i: INT:=0;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[Axis.IN_Closed_Open_Loop:=0;
Axis.IN_Enable_Control:=1;
Axis.OL_IN_Analog:=Speed;
Axis.OL_IN_Slave_Enable:=0;
Axis.OL_Move_Type:=1;
Axis.OL_IN_Bump_Duration:= Bump_Duration;  //Timer for Bump Type of Move
Axis.OL_IN_Bump_Trigger:= 1;]]></ST>
    </Implementation>
    <LineIds Name="MA_Jump">
      <LineId Id="3" Count="5" />
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>